[project]
name = "teufel_raumfeld"
version = "0.1.17-alpha4"
description = "Teufel Raumfeld Home Assistant Integration"
requires-python = ">=3.13.2,<3.14"
dependencies = [
    "hassfeld==0.3.14",
    "voluptuous>=0.14",
    "xmltodict>=0.13",
]

[project.optional-dependencies]
ha = ["homeassistant>=2025.5.0,<2026.3.0"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py313"
line-length = 125

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "TD"]
ignore = ["TD003"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disable_error_code = ["no-untyped-def", "no-untyped-call", "var-annotated", "attr-defined", "arg-type", "union-attr", "misc", "return-value", "type-arg"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
